--- a/weatherapp-frontend/src/App.css
+++ b/weatherapp-frontend/src/App.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.googleapis.com/css?family=Lato:400,700');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700');
 
 body {
     background-color: #3686B2;
@@ -16,6 +16,7 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    overflow: hidden;
 }
 
 #left-container, #right-container {
@@ -24,7 +25,17 @@ body {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    align-items: center;
+    /*align-items: center;*/
+}
+
+#left-container {
+    margin-left: 0px;
+}
+
+#right-container {
+    margin-right: 0px;
+   /* position: fixed;
+    right: 30px;*/
 }
 
 #middle-container {
@@ -67,7 +78,7 @@ border: 1px solid rgba(255, 255, 255, 0.2);
     gap: 5%;
 }
 
-.info-tab, .info-tab-inner, .login-inputs, .menu-button-lines, #x-button, .favorite-button {
+.info-tab, .info-tab-inner, .login-inputs, .menu-button-lines, #x-button, .favorite-button, #log-button {
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.4) , rgba(255, 255, 255, 0) );
     backdrop-filter: blur(0px);
     border: 1px solid rgba(255, 255, 255, 0.2);
@@ -127,19 +138,28 @@ border: 1px solid rgba(255, 255, 255, 0.2);
     width: 80%;
     height: 30px;
     min-height: auto;
-    min-width: 150px;
+    min-width: 170px;
     display:flex;
     align-items: center;
     z-index: 1;
 
 }
 
+#searchbar {
+    /*margin-right: 30px;*/
+    width: calc(25% * 0.8);
+    position: fixed;
+    right: 30px;
+}
+
 #login-container {
+    min-width: 130px;
     gap: 5px;
     width: auto;
     height: auto;
     flex-direction: column;
     padding: 40px;
+    margin-left: 30px;
 }
 
 #form-container {
@@ -159,6 +179,8 @@ border: 1px solid rgba(255, 255, 255, 0.2);
     padding-left: 40px;
     padding-right: 40px;
     padding-bottom: 40px;
+    min-width: 130px;
+    margin-left: 30px;
 }
 
 #menu-button {
@@ -208,6 +230,12 @@ border: 1px solid rgba(255, 255, 255, 0.2);
     width: 100%
 }
 
+#log-button {
+    cursor: pointer;
+    color: white;
+    border: 2px solid rgba(255, 255, 255, 0.2);
+}
+
 #x-button, .favorite-button {
     position: absolute;
     height: 20px;
@@ -253,12 +281,19 @@ height: auto;
 width: calc(80% - 26px);
 display: flex;
 min-height: auto;
-min-width: calc(150px - 26px);
+min-width: calc(170px - 26px);
 margin-left: 13px;
 margin-right: 13px;
 flex-direction: column;
 justify-content: center;
 text-align: center;
+}
+
+#searchsuggestions {
+    width: calc(25% * 0.8 - 26px);
+    position: fixed;
+    top: 60px;
+    right: 30px;
 }
 
 #favs-container {
@@ -302,7 +337,7 @@ gap: 4px;
     justify-content: center;
     margin-bottom: 5%;
     align-items: center;
-    margin-top: 5%;
+    margin-top: 50px;
 }
 
 #header-text {
@@ -314,7 +349,7 @@ gap: 4px;
     padding-left: 10px;
     padding-right: 10px;
     text-align: center;
-    z-index: 2;
+
 }
 
 .favorite-button {
