--- a/weatherapp-frontend/src/App.css
+++ b/weatherapp-frontend/src/App.css
@@ -160,6 +160,7 @@ border: 1px solid rgba(255, 255, 255, 0.2);
     flex-direction: column;
     padding: 40px;
     margin-left: 30px;
+    margin-top: 70px;
 }
 
 #form-container {
@@ -181,6 +182,7 @@ border: 1px solid rgba(255, 255, 255, 0.2);
     padding-bottom: 40px;
     min-width: 130px;
     margin-left: 30px;
+    margin-top: 70px;
 }
 
 #menu-button {
@@ -247,6 +249,11 @@ border: 1px solid rgba(255, 255, 255, 0.2);
     top: 15px;
     left: calc(100% - 45px);
     cursor: pointer;
+}
+
+#x-button {
+    left: auto;
+    right: calc(100% - 38px);
 }
 
 .x1, .x2 {
@@ -394,3 +401,17 @@ gap: 4px;
 .h1-tab {
     position:relative;
 }
+
+.loader {
+    border: 3px solid rgba(255,255,255,0.8); /* Light grey */
+    border-top: 3px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 1.5ch;
+    height: 1.5ch;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
